--- a/PinchNL/Podfile
+++ b/PinchNL/Podfile
@@ -7,6 +7,7 @@ target 'PinchNL-MVVM' do
   pod 'RxSwift'
   pod 'RxCocoa'
   pod 'Moya/RxSwift'
+  pod 'Kingfisher', '~> 6.0'
   # Pods for PinchNL-MVVM
 
 end
