--- a/PinchNL/Podfile
+++ b/PinchNL/Podfile
@@ -17,6 +17,9 @@ target 'PinchNL-VIP' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
   pod 'Moya'
+  pod 'RealmSwift'
+  pod 'Kingfisher', '~> 6.0'
+
   # Pods for PinchNL-VIP
 
 end
